Initial core foundation provided for own user library. Major features still missing, but the general framework and structure should be represented in this change